--- a/src/entyties/DocumentContent/DocumentContent.module.scss
+++ b/src/entyties/DocumentContent/DocumentContent.module.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   padding: 15px;
   background: var(--white);
   display: flex;
@@ -8,9 +9,29 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
 }
 
+.rotateDevice {
+  //position: sticky;
+  //z-index: 100;
+  //width: 100%;
+  //display: flex;
+  //justify-content: end;
+
+  svg {
+    width: 25px;
+    height: 25px;
+    top: 10px;
+  }
+  color: var(--color-success-100);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
 .title {
   margin-top: 0;
-  text-align: start;
-  width: 100%;
-  margin-bottom: 10px;
 }
