--- a/src/shared/ui/CustomizeButton/CustomizeButton.module.scss
+++ b/src/shared/ui/CustomizeButton/CustomizeButton.module.scss
@@ -2,6 +2,7 @@
   background: var(--color-success-100);
   color: var(--color-neutral-300);
   width: 100%;
+  border: 1px solid var(--color-neutral-300);
 
   @media (min-width: 768px) {
     max-width: 350px;
@@ -16,6 +17,7 @@
   background: var(--color-neutral-300);
   color: var(--color-success-100);
   width: 100%;
+  border: 1px solid var(--color-success-100);
 
   @media (min-width: 768px) {
     max-width: 350px;
