--- a/src/widgets/PDFviewer/PDFviewer.module.scss
+++ b/src/widgets/PDFviewer/PDFviewer.module.scss
@@ -2,10 +2,11 @@
   width: 100%;
   max-width: 800px;
   border: 1px solid var(--color-neutral-200);
-  overflow: scroll;
   border-radius: 10px;
-  touch-action: auto;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
+  touch-action: pinch-zoom;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 
   @media (max-width: 1280px) {
     max-width: 800px;
