--- a/src/widgets/PDFviewer/PDFviewer.module.scss
+++ b/src/widgets/PDFviewer/PDFviewer.module.scss
@@ -4,9 +4,6 @@
   border: 1px solid var(--color-neutral-200);
   border-radius: 10px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
-  touch-action: pinch-zoom;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
 
   @media (max-width: 1280px) {
     max-width: 800px;
@@ -18,5 +15,8 @@
 
   @media (max-width: 768px) {
     width: 100%;
+    overscroll-behavior: contain;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
