--- a/src/entyties/DocumentContent/DocumentContent.module.scss
+++ b/src/entyties/DocumentContent/DocumentContent.module.scss
@@ -10,12 +10,6 @@
 }
 
 .rotateDevice {
-  //position: sticky;
-  //z-index: 100;
-  //width: 100%;
-  //display: flex;
-  //justify-content: end;
-
   svg {
     width: 25px;
     height: 25px;
@@ -30,8 +24,9 @@
   width: 100%;
   align-items: center;
   margin-bottom: 10px;
-}
 
-.title {
-  margin-top: 0;
+  .title {
+    margin-bottom: 0 !important;
+    margin-top: 0;
+  }
 }
