--- a/src/widgets/PDFviewer/PDFviewer.module.scss
+++ b/src/widgets/PDFviewer/PDFviewer.module.scss
@@ -19,3 +19,10 @@
     -webkit-overflow-scrolling: touch;
   }
 }
+
+.scrollArea {
+  max-height: 80vh;
+  overflow-y: auto;
+  overscroll-behavior-y: auto; // 👈 ключ к "прозрачному" скроллу
+  -webkit-overflow-scrolling: touch;
+}
