--- a/src/widgets/pdf2/PDFviewer.module.scss
+++ b/src/widgets/pdf2/PDFviewer.module.scss
@@ -1,12 +1,9 @@
-// PDFviewer.module.scss
-
 .pdfWrapper {
   width: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 
-  touch-action: manipulation; // разрешает зум pinch на мобильных
-  // Для плавности
+  touch-action: manipulation;
   scroll-behavior: smooth;
 
   // Отключим зум всей страницы
