--- a/src/widgets/pdf2/PDFviewer.module.scss
+++ b/src/widgets/pdf2/PDFviewer.module.scss
@@ -1,13 +1,17 @@
 .pdfWrapper {
   width: 100%;
+  height: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-
-  touch-action: manipulation;
   scroll-behavior: smooth;
+  touch-action: pan-y;
 
-  // Отключим зум всей страницы
   @media (max-width: 768px) {
     overscroll-behavior-y: contain;
   }
+}
+
+.zoomable {
+  touch-action: pinch-zoom; // ← важно!
+  transform-origin: 0 0;
 }
