--- a/src/widgets/pdf2/PDFviewer.module.scss
+++ b/src/widgets/pdf2/PDFviewer.module.scss
@@ -1,17 +1,13 @@
 .pdfWrapper {
   width: 100%;
-  height: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  scroll-behavior: smooth;
-  touch-action: pan-y;
 
+  touch-action: manipulation;
+  scroll-behavior: smooth;
+
+  // Отключим зум всей страницы
   @media (max-width: 768px) {
     overscroll-behavior-y: contain;
   }
-}
-
-.zoomable {
-  touch-action: pinch-zoom; // ← важно!
-  transform-origin: 0 0;
 }
