--- a/src/shared/ui/CustomizeButton/CustomizeButton.module.scss
+++ b/src/shared/ui/CustomizeButton/CustomizeButton.module.scss
@@ -3,6 +3,7 @@
   color: var(--color-neutral-300);
   width: 100%;
   border: 1px solid var(--color-neutral-300);
+  transform: scale(1);
 
   @media (min-width: 768px) {
     max-width: 350px;
@@ -18,6 +19,7 @@
   color: var(--color-success-100);
   width: 100%;
   border: 1px solid var(--color-success-100);
+  transform: scale(1);
 
   @media (min-width: 768px) {
     max-width: 350px;
