--- a/src/widgets/pdf2/PDFviewer.module.scss
+++ b/src/widgets/pdf2/PDFviewer.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  transform: scale(1);
 
   touch-action: manipulation;
   scroll-behavior: smooth;
