--- a/src/widgets/Layout/Layout.module.scss
+++ b/src/widgets/Layout/Layout.module.scss
@@ -1,28 +1,36 @@
-.container {
-  position: relative;
-  background-color: var(--color-neutral-300);
-  min-height: 100vh;
-}
-
 .wrapper {
-  position: sticky;
-  bottom: -1px;
-  z-index: 10;
-  padding: 15px 20px;
-  display: flex;
-  justify-content: center;
-  border-top-right-radius: 14px;
-  border-top-left-radius: 14px;
-  overflow: hidden;
+  position: relative;
+  padding-top: 80px; // чтобы PDF не налезал на заголовок
 }
 
-.agreeBtn {
-  height: 44px;
+.fixedHeader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: white;
+  z-index: 10;
+  padding: 12px 16px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.noZoom {
   transform: scale(1);
+  transform-origin: top left;
   touch-action: manipulation;
 }
 
-.wrapperBtn {
-  position: sticky;
-  bottom: -1px;
+.pdfScroll {
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
+
+  touch-action: pan-y pinch-zoom;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
