--- a/src/widgets/PDFviewer/PDFviewer.module.scss
+++ b/src/widgets/PDFviewer/PDFviewer.module.scss
@@ -4,6 +4,7 @@
   border: 1px solid var(--color-neutral-200);
   border-radius: 10px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
+  touch-action: none !important;
 
   @media (max-width: 1280px) {
     max-width: 800px;
