--- a/src/entyties/ElectronicSignaturePage/ElectronicSignaturePage.module.scss
+++ b/src/entyties/ElectronicSignaturePage/ElectronicSignaturePage.module.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 500px;
+  align-self: center;
+  justify-self: center;
 
   .title {
     margin-top: 0;
